# slack-management-mcp

./: .gitignore  README.md  pyproject.toml  slack-app-manifest.yaml
.github/workflows/: ci.yml
src/slack_management_mcp/: __init__.py  server.py  slack.py
tests/: test_tools.py
